--- a/.github/workflows/verify-parachain-temp-spec-chain.yml
+++ b/.github/workflows/verify-parachain-temp-spec-chain.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Pull srtool docker image
         run: |
-          srtool pull
+          srtool pull --engine docker
 
       - name: Build your runtime binary
         run: |
