--- a/bridges/snowbridge/primitives/router/Cargo.toml
+++ b/bridges/snowbridge/primitives/router/Cargo.toml
@@ -15,6 +15,7 @@ workspace = true
 codec = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 log = { workspace = true }
+alloy-sol-types = { workspace = true }
 
 frame-support = { workspace = true }
 frame-system = { workspace = true }
@@ -36,6 +37,7 @@ hex-literal = { workspace = true, default-features = true }
 [features]
 default = ["std"]
 std = [
+	"alloy-sol-types/std",
 	"codec/std",
 	"frame-support/std",
 	"frame-system/std",
