--- a/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo/Cargo.toml
@@ -77,7 +77,6 @@ pallet-collator-selection.workspace = true
 parachain-info.workspace = true
 parachains-common.workspace = true
 testnet-parachains-constants = { features = ["rococo"], workspace = true }
-<<<<<<< HEAD
 bp-asset-hub-rococo.workspace = true
 bp-asset-hub-westend.workspace = true
 bp-bridge-hub-polkadot.workspace = true
@@ -92,6 +91,7 @@ bp-relayers.workspace = true
 bp-runtime.workspace = true
 bp-rococo.workspace = true
 bp-westend.workspace = true
+bp-xcm-bridge-hub-router.workspace = true
 pallet-bridge-grandpa.workspace = true
 pallet-bridge-messages.workspace = true
 pallet-bridge-parachains.workspace = true
@@ -109,45 +109,6 @@ snowbridge-outbound-queue-runtime-api.workspace = true
 snowbridge-router-primitives.workspace = true
 snowbridge-runtime-common.workspace = true
 bridge-hub-common.workspace = true
-=======
-
-# Bridges
-bp-asset-hub-rococo = { workspace = true }
-bp-asset-hub-westend = { workspace = true }
-bp-bridge-hub-polkadot = { workspace = true }
-bp-bridge-hub-rococo = { workspace = true }
-bp-bridge-hub-westend = { workspace = true }
-bp-header-chain = { workspace = true }
-bp-messages = { workspace = true }
-bp-parachains = { workspace = true }
-bp-polkadot-bulletin = { workspace = true }
-bp-polkadot-core = { workspace = true }
-bp-relayers = { workspace = true }
-bp-runtime = { workspace = true }
-bp-rococo = { workspace = true }
-bp-westend = { workspace = true }
-bp-xcm-bridge-hub-router = { workspace = true }
-pallet-bridge-grandpa = { workspace = true }
-pallet-bridge-messages = { workspace = true }
-pallet-bridge-parachains = { workspace = true }
-pallet-bridge-relayers = { workspace = true }
-pallet-xcm-bridge-hub = { workspace = true }
-bridge-runtime-common = { workspace = true }
-
-# Ethereum Bridge (Snowbridge)
-snowbridge-beacon-primitives = { workspace = true }
-snowbridge-pallet-system = { workspace = true }
-snowbridge-system-runtime-api = { workspace = true }
-snowbridge-core = { workspace = true }
-snowbridge-pallet-ethereum-client = { workspace = true }
-snowbridge-pallet-inbound-queue = { workspace = true }
-snowbridge-pallet-outbound-queue = { workspace = true }
-snowbridge-outbound-queue-runtime-api = { workspace = true }
-snowbridge-router-primitives = { workspace = true }
-snowbridge-runtime-common = { workspace = true }
-
-bridge-hub-common = { workspace = true }
->>>>>>> 8f4b99cf (Bridges - revert-back congestion mechanism (#6781))
 
 [dev-dependencies]
 bridge-hub-test-utils = { default-features = true, path = "../test-utils" }
