--- a/.github/workflows/verify-parachain-temp-spec-chain.yml
+++ b/.github/workflows/verify-parachain-temp-spec-chain.yml
@@ -8,18 +8,23 @@ on:
   merge_group:
   workflow_dispatch:
 
-jobs:
-  preflight:
-    uses: ./.github/workflows/reusable-preflight.yml
+permissions:
+  contents: read
+  actions: write
 
+jobs:
   build-wasm:
-    runs-on: ${{ needs.preflight.outputs.RUNNER }}
-    needs: preflight
-    container:
-      image: ${{ needs.preflight.outputs.IMAGE }}
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
 
       - name: Install srtool-cli
         run: |
@@ -29,7 +34,7 @@ jobs:
 
       - name: Pull srtool docker image
         run: |
-          srtool pull --engine docker
+          srtool pull --engine podman
 
       - name: Build your runtime binary
         run: |
@@ -45,13 +50,17 @@ jobs:
           overwrite: true
 
   build-test-spec-chain:
-    runs-on: ${{ needs.preflight.outputs.RUNNER }}
-    needs: build-wasm
-    container:
-      image: ${{ needs.preflight.outputs.IMAGE }}
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
 
       - name: Download runtime artifact
         uses: actions/download-artifact@v4.3.1
@@ -95,10 +104,8 @@ jobs:
           overwrite: true
 
   verify-spec-match:
-    runs-on: ${{ needs.preflight.outputs.RUNNER }}
-    needs: build-test-spec-chain
-    container:
-      image: ${{ needs.preflight.outputs.IMAGE }}
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
