Restore lost feature propagation

--- a/cumulus/polkadot-omni-node/lib/Cargo.toml
+++ b/cumulus/polkadot-omni-node/lib/Cargo.toml
@@ -96,6 +96,9 @@ wait-timeout = { workspace = true }
 
 [features]
 default = []
+full-pov-size = [
+	"cumulus-client-consensus-aura/full-pov-size",
+]
 rococo-native = [
 	"polkadot-cli/rococo-native",
 ]
