--- a/substrate/frame/revive/fixtures/Cargo.toml
+++ b/substrate/frame/revive/fixtures/Cargo.toml
@@ -29,5 +29,6 @@ anyhow = { workspace = true, default-features = true }
 
 [features]
 default = ["std"]
+unstable-api = []
 # only when std is enabled all fixtures are available
 std = ["anyhow", "frame-system", "log/std", "sp-core", "sp-io", "sp-runtime"]
