--- a/Cargo.toml
+++ b/Cargo.toml
@@ -815,14 +815,7 @@ http = { version = "1.1" }
 http-body = { version = "1", default-features = false }
 http-body-util = { version = "0.1.2", default-features = false }
 hyper = { version = "1.3.1", default-features = false }
-hyper-rustls = { version = "0.27.3", default-features = false, features = [
-	"http1",
-	"http2",
-	"logging",
-	"ring",
-	"rustls-native-certs",
-	"tls12",
-] }
+hyper-rustls = { version = "0.27.3", default-features = false, features = ["http1", "http2", "logging", "ring", "rustls-native-certs", "tls12"] }
 hyper-util = { version = "0.1.5", default-features = false }
 impl-serde = { version = "0.5.0", default-features = false }
 impl-trait-for-tuples = { version = "0.2.2" }
@@ -1143,12 +1136,7 @@ rstest = { version = "0.18.2" }
 rustc-hash = { version = "1.1.0" }
 rustc-hex = { version = "2.1.0", default-features = false }
 rustix = { version = "0.36.7", default-features = false }
-rustls = { version = "0.23.18", default-features = false, features = [
-	"logging",
-	"ring",
-	"std",
-	"tls12",
-] }
+rustls = { version = "0.23.18", default-features = false, features = ["logging", "ring", "std", "tls12"] }
 rustversion = { version = "1.0.17" }
 rusty-fork = { version = "0.3.0", default-features = false }
 safe-mix = { version = "1.0", default-features = false }
