--- a/bridges/snowbridge/pallets/outbound-queue-v2/Cargo.toml
+++ b/bridges/snowbridge/pallets/outbound-queue-v2/Cargo.toml
@@ -18,8 +18,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 serde = { features = ["alloc", "derive"], workspace = true }
 codec = { features = ["derive"], workspace = true }
 scale-info = { features = ["derive"], workspace = true }
-alloy-primitives = { features = ["rlp"], workspace = true }
-alloy-sol-types = { workspace = true }
+alloy-core = { workspace = true, features = ["sol-types"] }
 
 frame-benchmarking = { optional = true, workspace = true }
 frame-support = { workspace = true }
@@ -49,8 +48,7 @@ sp-keyring = { workspace = true, default-features = true }
 [features]
 default = ["std"]
 std = [
-	"alloy-primitives/std",
-	"alloy-sol-types/std",
+	"alloy-core/std",
 	"bridge-hub-common/std",
 	"codec/std",
 	"ethabi/std",
