--- a/substrate/client/executor/wasmtime/Cargo.toml
+++ b/substrate/client/executor/wasmtime/Cargo.toml
@@ -16,7 +16,7 @@ workspace = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-log = { workspace = true, default-features = true }
+tracing = { workspace = true, default-features = true }
 cfg-if = { workspace = true }
 libc = { workspace = true }
 parking_lot = { workspace = true, default-features = true }
