add offchain mod

--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -48,6 +48,7 @@ sp-genesis-builder = { optional = true, workspace = true }
 sp-inherents = { optional = true, workspace = true }
 sp-storage = { optional = true, workspace = true }
 sp-keyring = { optional = true, workspace = true }
+sp-application-crypto = { optional = true, workspace = true }
 
 frame-executive = { optional = true, workspace = true }
 frame-system-rpc-runtime-api = { optional = true, workspace = true }
@@ -72,6 +73,7 @@ runtime = [
 	"frame-executive",
 	"frame-system-rpc-runtime-api",
 	"sp-api",
+	"sp-application-crypto",
 	"sp-block-builder",
 	"sp-consensus-aura",
 	"sp-consensus-grandpa",
@@ -96,6 +98,7 @@ std = [
 	"log/std",
 	"scale-info/std",
 	"sp-api?/std",
+	"sp-application-crypto?/std",
 	"sp-arithmetic/std",
 	"sp-block-builder?/std",
 	"sp-consensus-aura?/std",
