--- a/.github/workflows/release-50_publish-docker.yml
+++ b/.github/workflows/release-50_publish-docker.yml
@@ -46,7 +46,7 @@ on:
         required: true
 
       stable_tag:
-        description: Tag matching the actual stable release version in the format stableYYMM or stableYYMM-X for patch releases
+        description: Tag matching the actual stable release version in the format polkadpt-stableYYMM(-rcX) or plkadot-stableYYMM-X(-rcX) for patch releases
         required: true
 
 permissions:
