--- a/.github/workflows/veriy-minimal-parachain-dev-spec-chains.yml
+++ b/.github/workflows/veriy-minimal-parachain-dev-spec-chains.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Create chain spec
         run: |
-          chain-spec-builder create \
+          chain-spec-builder  -c ${{ matrix.template.chain_spec_output }}  create \
             --relay-chain "dev" \
             --para-id 1000 \
             --runtime "${{ matrix.template.runtime_path }}/target/srtool/release/wbuild/${{ matrix.template.runtime_wasm_path }}" \
