add fix for workflow

--- a/.github/workflows/verify-templates-dev-chain-spec.yml
+++ b/.github/workflows/verify-templates-dev-chain-spec.yml
@@ -20,13 +20,13 @@ jobs:
           - package_name: 'parachain-template-runtime'
             runtime_path: './templates/parachain/runtime'
             artifact_name: 'wasm-parachain-template-runtime'
-            chain_spec_output: 'parachain_test_chain_spec'
+            chain_spec_output: 'parachain_test_chain_spec.json'
             runtime_wasm_path: 'parachain-template-runtime/parachain_template_runtime.compact.compressed.wasm'
             relay_chain: 'rococo-local'
           - package_name: 'minimal-template-runtime'
             runtime_path: './templates/minimal/runtime'
             artifact_name: 'wasm-minimal-template-runtime'
-            chain_spec_output: 'minimal_test_chain_spec'
+            chain_spec_output: 'minimal_test_chain_spec.json'
             runtime_wasm_path: 'minimal-template-runtime/minimal_template_runtime.compact.compressed.wasm'
             relay_chain: 'dev'
 
