--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -39,7 +39,7 @@ frame-benchmarking = { optional = true, workspace = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
 pallet-revive-fixtures = { workspace = true, optional = true }
-pallet-revive-uapi = { workspace = true, features = ["scale", "unstable-api"] }
+pallet-revive-uapi = { workspace = true, features = ["scale"] }
 pallet-revive-proc-macro = { workspace = true }
 pallet-transaction-payment = { workspace = true }
 sp-api = { workspace = true }
