--- a/substrate/frame/revive/uapi/Cargo.toml
+++ b/substrate/frame/revive/uapi/Cargo.toml
@@ -24,7 +24,8 @@ codec = { features = [
 polkavm-derive = { version = "0.17.0" }
 
 [package.metadata.docs.rs]
-default-target = ["riscv64imac-unknown-none-elf"]
+features = ["unstable-api"]
+targets = ["riscv64imac-unknown-none-elf"]
 
 [features]
 default = ["scale"]
