--- a/substrate/frame/revive/uapi/Cargo.toml
+++ b/substrate/frame/revive/uapi/Cargo.toml
@@ -19,15 +19,16 @@ codec = { features = [
 	"derive",
 	"max-encoded-len",
 ], optional = true, workspace = true }
+pallet-revive-proc-macro = { workspace = true }
 
 [target.'cfg(target_arch = "riscv64")'.dependencies]
 polkavm-derive = { version = "0.17.0" }
 
 [package.metadata.docs.rs]
-features = ["unstable-api"]
+features = ["unstable-hostfn"]
 targets = ["riscv64imac-unknown-none-elf"]
 
 [features]
 default = ["scale"]
 scale = ["dep:codec", "scale-info"]
-unstable-api = []
+unstable-hostfn = []
