add SUBSTRATE_ENABLE_POLKAVM=1 to .github/workflows/build-misc.yml
Signed-off-by: Jarkko Sakkinen <jarkko@parity.io>

--- a/.github/workflows/build-misc.yml
+++ b/.github/workflows/build-misc.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Build
         env:
           SUBSTRATE_RUNTIME_TARGET: riscv
+          SUBSTRATE_ENABLE_POLKAVM: 1
         id: required
         run: |
           forklift cargo check -p minimal-template-runtime
