--- a/substrate/primitives/application-crypto/test/Cargo.toml
+++ b/substrate/primitives/application-crypto/test/Cargo.toml
@@ -18,11 +18,9 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 sp-api = { workspace = true, default-features = true }
 sp-application-crypto = { workspace = true, default-features = true }
-sp-core = { workspace = true, features = ["full_crypto"] }
+sp-core = { workspace = true }
 sp-keystore = { workspace = true }
 substrate-test-runtime-client = { workspace = true, features = ["bls-experimental"] }
 
 [features]
-std = []
-
 bls-experimental = ["substrate-test-runtime-client/bls-experimental"]
