--- a/substrate/frame/revive/fixtures/Cargo.toml
+++ b/substrate/frame/revive/fixtures/Cargo.toml
@@ -15,12 +15,9 @@ exclude-from-umbrella = true
 workspace = true
 
 [dependencies]
-frame-system = { workspace = true, default-features = true, optional = true }
 sp-core = { workspace = true, default-features = true, optional = true }
 sp-io = { workspace = true, default-features = true, optional = true }
-sp-runtime = { workspace = true, default-features = true, optional = true }
 anyhow = { workspace = true, default-features = true, optional = true }
-log = { workspace = true }
 
 [build-dependencies]
 toml = { workspace = true }
@@ -30,4 +27,4 @@ anyhow = { workspace = true, default-features = true }
 [features]
 default = ["std"]
 # only when std is enabled all fixtures are available
-std = ["anyhow", "frame-system", "log/std", "sp-core", "sp-io", "sp-runtime"]
+std = ["anyhow", "sp-core", "sp-io"]
