--- a/substrate/frame/revive/rpc/Cargo.toml
+++ b/substrate/frame/revive/rpc/Cargo.toml
@@ -42,40 +42,33 @@ clap = { workspace = true, features = ["derive"] }
 anyhow = { workspace = true }
 futures = { workspace = true, features = ["thread-pool"] }
 jsonrpsee = { workspace = true, features = ["full"] }
-serde_json = { workspace = true }
 thiserror = { workspace = true }
 sp-crypto-hashing = { workspace = true }
 subxt = { workspace = true, default-features = true, features = ["reconnecting-rpc-client"] }
 tokio = { workspace = true, features = ["full"] }
 codec = { workspace = true, features = ["derive"] }
-log.workspace = true
+log = { workspace = true }
 pallet-revive = { workspace = true, default-features = true }
 sp-core = { workspace = true, default-features = true }
 sp-weights = { workspace = true, default-features = true }
-sp-runtime = { workspace = true, default-features = true }
 sc-rpc = { workspace = true, default-features = true }
 sc-rpc-api = { workspace = true, default-features = true }
 sc-cli = { workspace = true, default-features = true }
 sc-service = { workspace = true, default-features = true }
 prometheus-endpoint = { workspace = true, default-features = true }
-
 rlp = { workspace = true, optional = true }
 subxt-signer = { workspace = true, optional = true, features = [
 	"unstable-eth",
 ] }
 hex = { workspace = true }
-hex-literal = { workspace = true, optional = true }
-scale-info = { workspace = true }
-secp256k1 = { workspace = true, optional = true, features = ["recovery"] }
 ethabi = { version = "18.0.0" }
 
 [features]
-example = ["hex-literal", "rlp", "secp256k1", "subxt-signer"]
+example = ["rlp", "subxt-signer"]
 
 [dev-dependencies]
 env_logger = { workspace = true }
 static_init = { workspace = true }
-hex-literal = { workspace = true }
 pallet-revive-fixtures = { workspace = true, default-features = true }
 substrate-cli-test-utils = { workspace = true }
 subxt-signer = { workspace = true, features = ["unstable-eth"] }
