feat(undying-collator): implement initial version of malicious collator submitting same collation to all backing groups

--- a/polkadot/parachain/test-parachains/undying/collator/Cargo.toml
+++ b/polkadot/parachain/test-parachains/undying/collator/Cargo.toml
@@ -20,6 +20,7 @@ clap = { features = ["derive"], workspace = true }
 futures = { workspace = true }
 futures-timer = { workspace = true }
 log = { workspace = true, default-features = true }
+tokio = { features = ["sync"], workspace = true, default-features = true }
 
 test-parachain-undying = { workspace = true }
 polkadot-primitives = { workspace = true, default-features = true }
