--- a/substrate/frame/scheduler/Cargo.toml
+++ b/substrate/frame/scheduler/Cargo.toml
@@ -1,4 +1,4 @@
-[package]
+                                   [package]
 name = "pallet-scheduler"
 version = "29.0.0"
 authors.workspace = true
@@ -16,17 +16,11 @@ workspace = true
 codec = { features = ["derive"], workspace = true }
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
-frame-benchmarking = { optional = true, workspace = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-sp-weights = { workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"] }
 docify = { workspace = true }
 
 [dev-dependencies]
 pallet-preimage = { workspace = true, default-features = true }
-sp-core = { workspace = true }
 substrate-test-utils = { workspace = true }
 
 [features]
@@ -41,20 +35,12 @@ runtime-benchmarks = [
 ]
 std = [
 	"codec/std",
-	"frame-benchmarking?/std",
-	"frame-support/std",
-	"frame-system/std",
+	"frame/std"
 	"log/std",
 	"pallet-preimage/std",
 	"scale-info/std",
-	"sp-core/std",
-	"sp-io/std",
-	"sp-runtime/std",
-	"sp-weights/std",
 ]
 try-runtime = [
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
+	"frame/try-runtime"
 	"pallet-preimage/try-runtime",
-	"sp-runtime/try-runtime",
 ]
