--- a/substrate/frame/scheduler/Cargo.toml
+++ b/substrate/frame/scheduler/Cargo.toml
@@ -26,21 +26,17 @@ substrate-test-utils = { workspace = true }
 [features]
 default = ["std"]
 runtime-benchmarks = [
-	"frame-benchmarking",
-	"frame-benchmarking/runtime-benchmarks",
-	"frame-support/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
+	"frame/runtime-benchmarks",
 	"pallet-preimage/runtime-benchmarks",
-	"sp-runtime/runtime-benchmarks",
 ]
 std = [
 	"codec/std",
-	"frame/std"
+	"frame/std",
 	"log/std",
 	"pallet-preimage/std",
 	"scale-info/std",
 ]
 try-runtime = [
-	"frame/try-runtime"
+	"frame/try-runtime",
 	"pallet-preimage/try-runtime",
 ]
