Gov config (WIP)

--- a/cumulus/parachains/runtimes/assets/asset-hub-next-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-next-westend/Cargo.toml
@@ -29,10 +29,12 @@ pallet-asset-conversion-ops = { workspace = true }
 pallet-asset-conversion-tx-payment = { workspace = true }
 pallet-assets = { workspace = true }
 pallet-asset-conversion = { workspace = true }
+pallet-asset-rate = { workspace = true }
 pallet-assets-freezer = { workspace = true }
 pallet-aura = { workspace = true }
 pallet-authorship = { workspace = true }
 pallet-balances = { workspace = true }
+pallet-conviction-voting = { workspace = true }
 pallet-delegated-staking = { workspace = true }
 pallet-fast-unstake = { workspace = true }
 pallet-election-provider-multi-phase = { workspace = true }
@@ -45,16 +47,23 @@ pallet-nfts-runtime-api = { workspace = true }
 pallet-nomination-pools = { workspace = true }
 pallet-nomination-pools-runtime-api = { workspace = true }
 pallet-proxy = { workspace = true }
+pallet-preimage = { workspace = true }
+pallet-referenda = { workspace = true }
+pallet-scheduler = { workspace = true }
 pallet-session = { workspace = true }
 pallet-state-trie-migration = { workspace = true }
 pallet-staking-runtime-api = { workspace = true }
 pallet-timestamp = { workspace = true }
 pallet-transaction-payment = { workspace = true }
 pallet-transaction-payment-rpc-runtime-api = { workspace = true }
+pallet-treasury = { workspace = true }
 pallet-uniques = { workspace = true }
 pallet-utility = { workspace = true }
+pallet-vesting = { workspace = true }
+pallet-whitelist = { workspace = true }
 sp-api = { workspace = true }
 frame-election-provider-support = { workspace = true }
+sp-arithmetic = { workspace = true }
 sp-block-builder = { workspace = true }
 sp-consensus-aura = { workspace = true }
 sp-core = { workspace = true }
