--- a/substrate/frame/paged-list/Cargo.toml
+++ b/substrate/frame/paged-list/Cargo.toml
@@ -19,13 +19,7 @@ codec = { features = ["derive"], workspace = true }
 docify = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 
-frame-benchmarking = { optional = true, workspace = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-
-sp-runtime = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
+frame = { workspace = true, features = ["experimental", "runtime"] }
 sp-metadata-ir = { optional = true, workspace = true }
 
 [features]
@@ -33,27 +27,16 @@ default = ["std"]
 
 std = [
 	"codec/std",
-	"frame-benchmarking?/std",
-	"frame-support/std",
-	"frame-system/std",
+	"frame/std",
 	"scale-info/std",
-	"sp-core/std",
-	"sp-io/std",
-	"sp-metadata-ir/std",
-	"sp-runtime/std",
 ]
 
 runtime-benchmarks = [
-	"frame-benchmarking/runtime-benchmarks",
-	"frame-support/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
-	"sp-runtime/runtime-benchmarks",
+	"frame/runtime-benchmarks",
 ]
 
 try-runtime = [
-	"frame-support/try-runtime",
-	"frame-system/try-runtime",
-	"sp-runtime/try-runtime",
+	"frame/try-runtime",
 ]
 
 frame-metadata = ["sp-metadata-ir"]
