elastic scaling RFC 103 end-to-end test (#6452)
Adds a new zombienet-sdk test which verifies that elastic scaling works
correctly both with the MVP and the new RFC 103 implementation which
sends the core selector as a UMP signal.

Also enables the V2 receipts node feature for testnet genesis config.

Part of https://github.com/paritytech/polkadot-sdk/issues/5049

---------

Co-authored-by: Javier Viola <javier@parity.io>
Co-authored-by: Javier Viola <363911+pepoviola@users.noreply.github.com>

--- a/cumulus/test/runtime/Cargo.toml
+++ b/cumulus/test/runtime/Cargo.toml
@@ -96,3 +96,4 @@ std = [
 ]
 increment-spec-version = []
 elastic-scaling = []
+experimental-ump-signals = ["cumulus-pallet-parachain-system/experimental-ump-signals"]
