--- a/substrate/frame/paged-list/fuzzer/Cargo.toml
+++ b/substrate/frame/paged-list/fuzzer/Cargo.toml
@@ -19,6 +19,11 @@ path = "src/paged_list.rs"
 [dependencies]
 arbitrary = { workspace = true }
 honggfuzz = { workspace = true }
-
 frame = { workspace = true, features = ["experimental", "runtime"] }
 pallet-paged-list = { features = ["std"], workspace = true }
+
+[features]
+default = ["std"]
+std = [
+	"frame/std",
+]
