--- a/.github/workflows/release-50_publish-docker.yml
+++ b/.github/workflows/release-50_publish-docker.yml
@@ -46,7 +46,7 @@ on:
         required: true
 
       stable_tag:
-        description: Tag matching the actual stable release version in the format stableYYMM or stableYYMM-X for patch releases
+        description: Tag matching the actual stable release version in the format polkadpt-stableYYMM(-rcX) or plkadot-stableYYMM-X(-rcX) for patch releases
         required: true
 
 permissions:
@@ -311,9 +311,9 @@ jobs:
           # TODO: The owner should be used below but buildx does not resolve the VARs
           # TODO: It would be good to get rid of this GHA that we don't really need.
           tags: |
-            egorpop/polkadot:${{ steps.fetch-data.outputs.stable }}
-            egorpop/polkadot:latest
-            egorpop/polkadot:${{ needs.fetch-latest-debian-package-version.outputs.polkadot_container_tag }}
+            parity/polkadot:${{ steps.fetch-data.outputs.stable }}
+            parity/polkadot:latest
+            parity/polkadot:${{ needs.fetch-latest-debian-package-version.outputs.polkadot_container_tag }}
           build-args: |
             VCS_REF=${{ github.ref }}
             POLKADOT_VERSION=${{ needs.fetch-latest-debian-package-version.outputs.polkadot_apt_version }}
