topped up sovereign account of penpal chain

--- a/cumulus/parachains/integration-tests/chopsticks/configs/westend-asset-hub-override.yaml
+++ b/cumulus/parachains/integration-tests/chopsticks/configs/westend-asset-hub-override.yaml
@@ -3,30 +3,26 @@ mock-signature-host: true
 #block: ${env.WESTEND_ASSET_HUB_BLOCK_NUMBER}
 db: ./db.sqlite
 runtime-log-level: 5
-#wasm-override: wasms/asset_hub_westend_runtime.compact.compressed.wasm
+wasm-override: wasms/asset_hub_westend_runtime.compact.compressed.wasm
 
 import-storage:
+  PolkadotXcm:
+    SafeXcmVersion: 5
   System:
     Account:
-      -
-        -
-          - 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY # Alice
-        - providers: 1
-          data:
-            free: 1000000000000000
-      -
-        -
-          - 5Eg2fntQqFi3EvFWAf71G66Ecjjah26bmFzoANAeHFgj9Lia
-        - providers: 1
-          data:
-            free: 1000000000000000
-      -
-        -
-          - 5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty # Bob 
-        - providers: 1
-          data:
-            free: 1000000000000000
+      [
+        [[5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY], { providers: 1, data: { free: 1000000000000000 } }], # Alice
+        [[5Eg2fntQqFi3EvFWAf71G66Ecjjah26bmFzoANAeHFgj9Lia], { providers: 1, data: { free: 1000000000000000 } }],
+        [[5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty], { providers: 1, data: { free: 1000000000000000 } }] # Bob
+      ]
   Assets:
     Account:
       - [[1984, 5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY], { balance: 1000000000 }]
-    Asset: [[[1984], { supply: 1000000000 }]]
+      - [[1984, 5Eg2fntSSE9VPsfxjgvpoZCoPo2uquZaYwmNDDV91bxUxEt7], { balance: 1000000000 }] # SA of Penpal chain
+
+    Asset:
+      [
+        [[1984], { supply: 4000000000 }],
+      ]
+
+
